Added a lot of new code, + helper for fields.

--- a/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
@@ -34,31 +34,14 @@
                             new SelectList(Model.EventTypes, "Value", "Text"),
                             new { onchange="this.form.submit()" })
 
-    @if (Model.TypeSpecefics != null)
+    @if (Model.TypeSpecifics != null)
     {
         <table>
-            @for (int i = 0; i < Model.TypeSpecefics.Count; i++)
+            @for (int i = 0; i < Model.TypeSpecifics.Count; i++)
             {
                 <tr>
-                    <td>@Model.TypeSpecefics[i].Name</td>
                     <td>
-                        @Html.HiddenFor(m => Model.TypeSpecefics[i].ID)
-                        @Html.HiddenFor(m => Model.TypeSpecefics[i].Datatype)
-                        @switch (Model.TypeSpecefics[i].Datatype)
-                        {
-                            case 0:
-                            case 3:
-                            case 4: @Html.TextBoxFor(m => Model.TypeSpecefics[i].IntValue);
-                                    @Html.ValidationMessageFor(m => Model.TypeSpecefics[i].IntValue) break;
-                            case 1:
-                            case 2:
-                            case 5: @Html.TextBoxFor(m => Model.TypeSpecefics[i].StringValue);
-                                    @Html.ValidationMessageFor(m => Model.TypeSpecefics[i].StringValue) break;
-                            case 6: @Html.CheckBoxFor(m => Model.TypeSpecefics[i].BoolValue);
-                                    @Html.ValidationMessageFor(m => Model.TypeSpecefics[i].BoolValue) break;
-                        }
-                        @if (Model.TypeSpecefics[i].Required)
-                        { <span style='color:red'>*</span> }
+                        @Html.FieldEditorFor(m => m.TypeSpecifics[i])
                     </td>
                 </tr>
             }           
