--- a/CalendarApplication/CalendarApplication/Content/Site.css
+++ b/CalendarApplication/CalendarApplication/Content/Site.css
@@ -16,17 +16,6 @@ section {
 /* Classes for GUI
 -----------------------------------------------------------*/
 
-/* Table entries in Monthly calender view */
-.calendar-month {
-    background-color:white;
-    border-width:1px;
-    text-align:left;
-    vertical-align:top;
-    padding:0;
-    width:100px;
-    height:80px;
-}
-
 /* Used for the datetime editor */
 .datetime-editor {
     margin-left:0;
@@ -55,6 +44,11 @@ legend
 {
     font-size:1.2em;
     font-weight: bold;
+}
+
+textarea 
+{
+    min-height: 75px;
 }
 
 .editor-label 
