--- a/CalendarApplication/CalendarApplication/Views/Calendar/Month.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Calendar/Month.cshtml
@@ -62,8 +62,9 @@
         {
             <td>@cal.GetWeekOfYear(day.Date,dfi.CalendarWeekRule,dfi.FirstDayOfWeek)</td>
         }
-        <td class="calendar-month" style="@(!day.Active ? "background-color:lightgrey;" : "")
-            @(day.Date.Month == DateTime.Now.Month && day.Date.Day == DateTime.Now.Day ? "border-width:4px;" : "")">
+        <td style="background-color:@(day.Active ? "white" : "lightgrey");text-align:left;vertical-align:top;
+            borderspacing:0;padding:0;width:100px;height:80px;
+            border-width:@(day.Date.Month == DateTime.Now.Month && day.Date.Day == DateTime.Now.Day ? "4px" : "1px")">
             <table style="border-spacing:0;width:100%">
                 <tr>
                     <td style="text-align:left;vertical-align:top;padding:0;font-size:14px;width:8px">
