--- a/CalendarApplication/CalendarApplication/Content/Site.css
+++ b/CalendarApplication/CalendarApplication/Content/Site.css
@@ -16,15 +16,25 @@ section {
 /* Classes for GUI
 -----------------------------------------------------------*/
 
-/* Used for the datetime editor */
-.datetime-editor {
+td.calendar-month {
+    background-color:white;
+    text-align:left;
+    vertical-align:top;
+    padding:0;
+    width:100px;
+    height:80px;
+    border-width:1px;
+}
+
+/* Used for the double list editor */
+.double-lists {
     margin-left:0;
     margin-right:auto;
     text-align:left;
     padding:0;
     border-collapse:collapse;
 }
-.datetime-editor td {
+.double-lists td {
     padding:0;
     padding-left:5px;
     padding-right:5px;
