--- a/CalendarApplication/CalendarApplication/Content/Site.css
+++ b/CalendarApplication/CalendarApplication/Content/Site.css
@@ -28,14 +28,14 @@ section {
 }
 
 /* Used for the datetime editor */
-.datetime-editor {
+.custom-style-1 {
     margin-left:0;
     margin-right:auto;
     text-align:left;
     padding:0;
     border-collapse:collapse;
 }
-.datetime-editor td {
+.custom-style-1 td {
     padding:0;
     padding-left:5px;
     padding-right:5px;
