--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -41,11 +41,11 @@ else {
                 </tr>
                 <tr>
                     <td>Event Start</td>
-                    <td>@Model.Start.GetDateTime()</td>
+                    <td>@Model.Start</td>
                 </tr>
                 <tr>
                     <td>Event End</td>
-                    <td>@Model.End.GetDateTime()</td>
+                    <td>@Model.End</td>
                 </tr>
                 <tr>
                     <td>Event State</td>
