Changed event view so that it works for event types without specifics (other than eventId == 1).

--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -69,7 +69,8 @@ else {
         </td>
         <td>
             <table class="gridtable">
-                @if (@Model.TypeId != 1) {
+                @if (Model.EventSpecial != null)
+                {
                     foreach (DataColumn col in Model.EventSpecial.Columns)
                     {
                         <tr>
