Added functionality for viewing a user

--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -33,7 +33,7 @@ else {
                 </tr>
                 <tr>
                     <td>Event Creator</td>
-                    <td>@Model.Creator</td>
+                    <td>@Html.ActionLink(Model.Creator, "Index", "User", new { UserId = Model.CreatorId }, null);</td>
                 </tr>
                 <tr>
                     <td>Event Type</td>
