--- a/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
@@ -10,13 +10,18 @@
 
 <h3 style="color:red">@TempData["errorMsg"]</h3>
 
+<link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/base/jquery-ui.css" rel="stylesheet" />
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/date-picker-validator.js")" type="text/javascript"></script>
 
 @using (Html.BeginForm()) {
 <fieldset>
     <legend>Create New Event</legend>
+    @Html.HiddenFor(m => m.SubmitType)
+    @Html.HiddenFor(m => m.ID)
+
     <h3>Basic event details:</h3>
     @Html.LabelFor(m => m.Name)
     @Html.TextBoxFor(m => m.Name)
@@ -29,15 +34,14 @@
     @Html.DateTimeEditorFor(m => m.End, "g.today,g.Start")
     <br />
 
-    @Html.HiddenFor(m => m.SubmitType)
-    @Html.HiddenFor(m => m.ID)
+    @Html.LabelFor(m => m.SelectedEventType)
     @Html.DropDownListFor(m => Model.SelectedEventType,
                             new SelectList(Model.EventTypes, "Value", "Text"),
                             new { onchange="this.form.submit()" })
 
     @if (Model.TypeSpecifics != null)
     {
-        <table>
+        <table style="margin-left:0;margin-right:auto">
             @for (int i = 0; i < Model.TypeSpecifics.Count; i++)
             {
                 <tr>
