- Added prepared statements to EditEventType in MSC. - Added method to FieldDataModel to get datatype as int from 0 to 6. - Allowed empty FieldDescriptions in database and application. - other small changes..

--- a/CalendarApplication/CalendarApplication/Views/Home/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <h2>Welcome to Stengade CalendarApplication</h2>
 
     <text>
-        You may view upcomming events using the
+        You may view upcoming events using the
         @Html.ActionLink("calendar menu", "Index", "Calendar", Calendar.InitialView, null).<br />
         If you have an account, you may  
         @Html.ActionLink("log in", "Login", "Account", null, null)
