Changed EditEvent in MSC to use prepared statements. Changing rooms when editing still needs work in it though.
Changed the returns and type in FieldModel.GetDBValue().

--- a/CalendarApplication/CalendarApplication/Views/Home/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@ else {
     <h2>Welcome @UserModel.GetCurrent().RealName</h2>
 
     <text>
-        You may view upcomming events using the
+        You may view upcoming events using the
         @Html.ActionLink("calendar menu", "Index", "Calendar", Calendar.InitialView, null).<br />
     </text>
     
