Changed the structure so that users may create/edit events without fields (thus removing the hardcoded Basic Event). database_create and database_testdata have been updated accordingly.
The implementation works in eventtype-create/edit, event-create and event-view.

--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -69,7 +69,7 @@ else {
         </td>
         <td>
             <table class="gridtable">
-                @if (Model.EventSpecial != null)
+                @if (Model.EventSpecial != null && Model.EventSpecial.Rows.Count != 0)
                 {
                     foreach (DataColumn col in Model.EventSpecial.Columns)
                     {
