--- a/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
@@ -17,48 +17,70 @@
 <script src="@Url.Content("~/Scripts/date-picker-validator.js")" type="text/javascript"></script>
 
 @using (Html.BeginForm()) {
-<fieldset>
+<fieldset style="width:80%">
     <legend>Create New Event</legend>
     @Html.HiddenFor(m => m.SubmitType)
     @Html.HiddenFor(m => m.ID)
 
-    <h3>Basic event details:</h3>
-    @Html.LabelFor(m => m.Name)
-    @Html.TextBoxFor(m => m.Name)
-    <br />
-    <br />
-    @Html.LabelFor(m => m.Start) <br />
-    @Html.DateTimeEditorFor(m => m.Start, "g.today,l.End")
-    <br />
-    @Html.LabelFor(m => m.End) <br />
-    @Html.DateTimeEditorFor(m => m.End, "g.today,g.Start")
-    <br />
+    <table style="margin-left:0;margin-right:0;width:100%">
+        <tr>
+            <td style="width:60%">
+                <h3>Basic event details:</h3>
+                @Html.LabelFor(m => m.Name)
+                @Html.TextBoxFor(m => m.Name)
+                <br />
+                <br />
+                @Html.LabelFor(m => m.Start) <br />
+                @Html.DateTimeEditorFor(m => m.Start, "g.today,l.End")
+                <br />
+                @Html.LabelFor(m => m.End) <br />
+                @Html.DateTimeEditorFor(m => m.End, "g.today,g.Start")
+                <br />
 
-    @Html.LabelFor(m => m.SelectedEventType)
-    @Html.DropDownListFor(m => Model.SelectedEventType,
-                            new SelectList(Model.EventTypes, "Value", "Text"),
-                            new { onchange="this.form.submit()" })
+                @Html.LabelFor(m => m.RoomSelectList)
+                @Html.ListEditorFor(m => m.RoomSelectList, "Rooms Selected", "Rooms Available")
+                <br />
 
-    @if (Model.TypeSpecifics != null)
-    {
-        <table style="margin-left:0;margin-right:auto">
-            @for (int i = 0; i < Model.TypeSpecifics.Count; i++)
-            {
-                <tr>
-                    <td>
-                        @Html.FieldEditorFor(m => m.TypeSpecifics[i])
-                    </td>
-                </tr>
-            }           
-        </table>
-    }
-    <br />
-    <br />
+                @Html.LabelFor(m => m.SelectedEventType)
+                @Html.DropDownListFor(m => Model.SelectedEventType,
+                                        new SelectList(Model.EventTypes, "Value", "Text"),
+                                        new { onchange="this.form.submit()" })
 
-    @Html.ListEditorFor(m => m.RoomSelectList, "Rooms Selected", "Rooms Available")
+                @if (Model.TypeSpecifics != null && Model.TypeSpecifics.Count > 0)
+                {
+                    <h3>Event Type Specifics:</h3>
+                    <table style="margin-left:0;margin-right:auto">
+                        @for (int i = 0; i < Model.TypeSpecifics.Count; i++)
+                        {
+                            <tr style="padding:0">
+                                <td style="padding:2px">
+                                    @Html.FieldEditorFor(m => m.TypeSpecifics[i])
+                                </td>
+                            </tr>
+                        }           
+                    </table>
+                }
+                <br />
+                <br />
+                <input type="submit" value="Create event" onclick="document.getElementById('SubmitType').value = 1" />
+            </td>
+            <td>
+                <fieldset>
+                    <legend>Event Access Rights</legend>
+                    Users with editor rights
+                    @Html.ListEditorFor(m => m.UserEditorList, "Users Selected", "Users Available")
+                    <br />
 
-    <br />
-    <input type="submit" value="Create event" onclick="document.getElementById('SubmitType').value = 1" />
+                    Groups with editor rights
+                    @Html.ListEditorFor(m => m.GroupEditorList, "Groups Selected", "Groups Available")
+                    <br />
+
+                    Visible: @Html.CheckBoxFor(m => m.Visible, new { onchange="" })
+                    @Html.ListEditorFor(m => m.GroupVisibleList, "Groups Selected", "Groups Available")
+                </fieldset>
+            </td>
+        </tr>
+    </table>
 
 </fieldset>
 }
