Fixed event view when viewing an event type with no extra fields.

--- a/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/Index.cshtml
@@ -15,7 +15,7 @@ else {
     <tr>
         <td>Event Details</td>
         <td>Rooms Used</td>
-        @if (@Model.TypeId != 1)
+        @if (Model.EventSpecial != null && Model.EventSpecial.Rows.Count != 0)
         {
             <td>Event type specific</td>
         }
