Set a maximum length for register information to avoid trouble with the database.
Small changes in the override of Equals in Room and GroupModel.
Used "is" keyword to avoid casting troubles.

--- a/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
@@ -58,4 +58,9 @@
 
         <input type="submit" value="Log in" />
     </fieldset>
+    
+    <!-- Print message if any (fx if unsuccessful login) -->
+    <p style="color:red">
+        @TempData["message"]
+    </p>
 }
