--- a/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Event/EditEvent.cshtml
@@ -11,10 +11,6 @@
 <h3 style="color:red">@TempData["errorMsg"]</h3>
 
 <link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/base/jquery-ui.css" rel="stylesheet" />
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery-ui-1.8.11.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/date-picker-validator.js")" type="text/javascript"></script>
 
 @using (Html.BeginForm()) {
 <fieldset style="width:80%">
@@ -75,8 +71,9 @@
                     @Html.ListEditorFor(m => m.GroupEditorList, "Groups Selected", "Groups Available")
                     <br />
 
-                    Visible: @Html.CheckBoxFor(m => m.Visible, new { onchange="" })
+                    Visible: @Html.CheckBoxFor(m => m.Visible, new { onchange="disableLists('GroupVisibleList',this.checked)" })
                     @Html.ListEditorFor(m => m.GroupVisibleList, "Groups Selected", "Groups Available")
+                    @if(Model.Visible) { <script>disableLists('GroupVisibleList', true)</script> }
                 </fieldset>
             </td>
         </tr>
