Started work on Group features, added group edit page and implemented a few features restructured part of the old group structure to be compatible with the new features.

--- a/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
@@ -35,6 +35,19 @@
 
 <fieldset>
     <legend>Groups</legend>
+    <table>
+        <tr>
+            <td>
+                @Html.DropDownListFor(m => Model.SelectedGroup, new SelectList(Model.Groups, "Value", "Text"))
+            </td>
+            <td>
+                <input type="submit" value="Edit" onclick="setSubmitValue(2)" />
+            </td>
+            <td>
+                <input type="submit" value="Create new" onclick="setSubmitValue(3)" />
+            </td>
+        </tr>
+    </table>
 </fieldset>
 
 <fieldset>
