Started work on the user management system. They now have a page with lists of approved users, users not approved and inactive users. Also added some sorting for some of the queries, so that users and groups are shown in aplphabetical order.

--- a/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/Index.cshtml
@@ -52,5 +52,6 @@
 
 <fieldset>
     <legend>Users</legend>
+    @Html.ActionLink("Manage users","ManageUsers","Maintenance",null,null)
 </fieldset>
 }
