--- a/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Account/Register.cshtml
@@ -56,7 +56,7 @@
             @Html.ValidationMessageFor(model => model.PasswordConfirm)
         </div>
 
-        <input type="submit" value="Log in" />
+        <input type="submit" value="Register" />
     </fieldset>
     
     <!-- Print message if any (fx if unsuccessful login) -->
