--- a/CalendarApplication/CalendarApplication/Views/Maintenance/FieldDetails.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/FieldDetails.cshtml
@@ -34,7 +34,8 @@
                cols="40" rows="4" onkeyup="updateCounter('Desc_@(Model.ViewID)',100);">@(Model.Description)</textarea></td>
     </tr>
     <tr>
-        <td><label for='Req_@(Model.ViewID)'>Field required</label></td>
+        <td><label for='Reqc_@(Model.ViewID)'>Field required for creation</label> <br />
+            <label for='Reqa_@(Model.ViewID)'>Field required for approval</label></td>
         <td>
             <div id="varchar_label_@(Model.ViewID)">
                 @if (Model.Datatype == Fieldtype.Text)
@@ -46,8 +47,10 @@
     </tr>
     <tr>
         <td style="text-align:center">
-            <input type='checkbox' id='Req_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].Required'
-            @(Model.Required?" checked":"") value="true">
+            <input type='checkbox' id='Reqc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].RequiredCreate'
+            @(Model.RequiredCreate?" checked":"") value="true"> <br />
+            <input type='checkbox' id='Reqa_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].RequiredApprove'
+            @(Model.RequiredApprove?" checked":"") value="true">
         </td>
         <td>
             <div id="varchar_input_@(Model.ViewID)">
