--- a/CalendarApplication/CalendarApplication/Views/Maintenance/FieldDetails.cshtml
+++ b/CalendarApplication/CalendarApplication/Views/Maintenance/FieldDetails.cshtml
@@ -34,8 +34,12 @@
                cols="40" rows="4" onkeyup="updateCounter('Desc_@(Model.ViewID)',100);">@(Model.Description)</textarea></td>
     </tr>
     <tr>
-        <td><label for='Reqc_@(Model.ViewID)'>Field required for creation</label> <br />
-            <label for='Reqa_@(Model.ViewID)'>Field required for approval</label></td>
+        <td>
+            
+            <input type='checkbox' id='Reqc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].RequiredCreate'
+            @(Model.RequiredCreate?" checked":"") value="true">
+            <label for='Reqc_@(Model.ViewID)'>Required for creation</label>
+        </td>
         <td>
             <div id="varchar_label_@(Model.ViewID)">
                 @if (Model.Datatype == Fieldtype.Text)
@@ -47,10 +51,9 @@
     </tr>
     <tr>
         <td style="text-align:center">
-            <input type='checkbox' id='Reqc_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].RequiredCreate'
-            @(Model.RequiredCreate?" checked":"") value="true"> <br />
             <input type='checkbox' id='Reqa_@(Model.ViewID)' name='TypeSpecific[@(Model.ViewID)].RequiredApprove'
             @(Model.RequiredApprove?" checked":"") value="true">
+            <label for='Reqa_@(Model.ViewID)'>Required for approval</label>
         </td>
         <td>
             <div id="varchar_input_@(Model.ViewID)">
